--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity
             android:name=".CalculatorActivity"
             android:exported="true" />
+        <activity android:name=".HistoryActivity" />
+
     </application>
 
 </manifest>
