--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
             android:exported="true" />
         <activity android:name=".HistoryActivity" />
 
+        <activity android:name=".CalendarActivity" />
+
+
     </application>
 
 </manifest>
