--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,14 +34,15 @@ android {
 }
 
 dependencies {
-    // AndroidX (güncel ve uyumlu sürümler)
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.room:room-ktx:2.6.1'
+    implementation 'com.android.support:support-compat:25.1.1'
+    implementation 'com.android.support:appcompat-v7:25.1.1'
 
-    implementation 'com.prolificinteractive:material-calendarview:1.6.0'
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
 
 
     // Test
