--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.example.myapplicationennew"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -22,28 +22,30 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+        }
     }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    // ✅ jvmTarget doğru yerde — buildTypes dışına taşındı
     kotlinOptions {
         jvmTarget = '1.8'
     }
 }
 
 dependencies {
+    // ✅ Sadece AndroidX kütüphaneleri, eski support'lar tamamen kaldırıldı
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.room:room-ktx:2.6.1'
-    implementation 'com.android.support:support-compat:25.1.1'
-    implementation 'com.android.support:appcompat-v7:25.1.1'
-
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
-
 
     // Test
     testImplementation 'junit:junit:4.13.2'
