--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplicationennew"
-        tools:targetApi="31">
+        tools:targetApi="34">
 
-        <!-- 🔹 Asıl açılış ekranı: MainActivity -->
+        <!-- 🔹 Ana açılış ekranı -->
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -23,14 +23,10 @@
             </intent-filter>
         </activity>
 
-        <!-- 🔸 Hesap makinesi ekranı -->
-        <activity
-            android:name=".CalculatorActivity"
-            android:exported="true" />
-        <activity android:name=".HistoryActivity" />
-
-        <activity android:name=".CalendarActivity" />
-
+        <!-- 🔸 Diğer activity'ler -->
+        <activity android:name=".CalculatorActivity" android:exported="true" />
+        <activity android:name=".HistoryActivity" android:exported="false" />
+        <activity android:name=".CalendarActivity" android:exported="false" />
 
     </application>
 
