--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,13 +36,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
     // ✅ Sadece AndroidX kütüphaneleri, eski support'lar tamamen kaldırıldı
-    implementation 'androidx.core:core-ktx:1.13.1'
-    implementation 'androidx.appcompat:appcompat:1.7.0'
-    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.room:room-ktx:2.6.1'
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
